# test-python-logger-best-practice

./: .gitignore  README.md
foo-app/: pyproject.toml
foo-app/foo_app/: __main__.py
foo-app/tests/: test_foo_app.py
foo-lib/: pyproject.toml
foo-lib/foo_lib/: __init__.py  x.py
foo-lib/tests/: test_foo_lib.py
