[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "foo-app"
version = "0.1.0"
description = ""
authors = ["keno <keno.ss57@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

foo-lib = {path = "../foo-lib/", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
